[package]
name = "cargo-hyperlight"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/cargo-hyperlight"
repository = "https://github.com/hyperlight-dev/cargo-hyperlight"
readme = "README.md"
description = "cargo subcommand to build hyperlight guest binaries"

[dependencies]
anyhow = "1.0"
console = "0.16"
const_format = "0.2"
glob = "0.3"
libc = "0.2"
os_str_bytes = "7.1.1"
regex = "1.12"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = { version = "8", features = ["regex"] }
